--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,9 @@
     "moduleResolution": "node", /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
     "baseUrl": "./daily-planner", /* Base directory to resolve non-absolute module names. */
     "paths": {
+      "root": [
+        "*"
+      ],
       "lib": [
         "./lib"
       ],
